--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-leaflet": "^5.0.0",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.3.0",
+    "react-secure-storage": "^1.3.2",
     "react-select": "^5.10.1"
   },
   "devDependencies": {
