--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.8.2",
     "leaflet": "^1.9.4",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -19,7 +21,8 @@
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.3.0",
     "react-secure-storage": "^1.3.2",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
